modify save mode

--- a/example.ipynb
+++ b/example.ipynb
@@ -15,6 +15,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ev50049/anaconda3/envs/mbemma110/lib/python3.6/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -99,60 +107,6 @@
    "source": [
     "## Models"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6a3eef81-f8d7-4e8c-9bc1-7cc29359dafc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: [1/1] main:17.9691 MSELoss:14.4095 KLD Loss:0.0000 KLD Transition Loss:1.3584 Negative Autocorrelation Log-Prior:2.2012\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(250000, 2)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m = models.tsTVAE(input_dim, lagtime=1, n_epochs=1, latent_dim=2, print_every=1)\n",
-    "embed = m.fit_transform(preprocessed_data)\n",
-    "embed.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86b4a962-d301-4df4-a5aa-518b07969494",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ba9f0b3-23ea-4a66-8581-aa6fdf1c1645",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "207b0774-ac4d-4df4-acd9-7c8647c42380",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
