add chignolin link

--- a/example.ipynb
+++ b/example.ipynb
@@ -64,6 +64,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d15db0f-ac02-40d5-93bd-202a866c1d4e",
+   "metadata": {},
+   "source": [
+    "### Alanine-dipeptide"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1fcb9938-d418-4608-8781-dc1a73aa3c5b",
@@ -78,18 +86,58 @@
     "data = np.load('alanine-dipeptide-3x250ns-heavy-atom-positions.npz')[\"arr_0\"]\n",
     "ref_data = np.load('alanine-dipeptide-3x250ns-backbone-dihedrals.npz')[\"arr_0\"]\n",
     "\n",
-    "n_timesteps, input_dim = data.shape"
+    "n_timesteps, input_dim = data.shape\n",
+    "\n",
+    "from sklearn import preprocessing\n",
+    "preprocessed_data = preprocessing.StandardScaler().fit_transform(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d8f66698-8386-4555-a0e6-3287c8870086",
+   "execution_count": null,
+   "id": "e407fdd2-ea9e-4460-9c83-ab4cd60ea68d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "354fff76-f8cf-45ac-b637-cb2fcd02faa2",
+   "metadata": {},
+   "source": [
+    "### Chignolin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ff8f288-4896-4035-9b9a-c769ce1ccd87",
+   "metadata": {},
+   "source": [
+    "Our chignolin dataset can be obtained via [this link](https://www.dropbox.com/sh/ag8vflw51ne5htj/AAB-e_o2A6dDZ7ZaqFDSmhOGa?dl=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "57f9d08c-629c-460f-afb7-ebb121096c05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import preprocessing\n",
-    "preprocessed_data = preprocessing.StandardScaler().fit_transform(data)"
+    "import pyemma\n",
+    "\n",
+    "pdb = \"prot.pdb\"\n",
+    "dcd = \"prot5.dcd\"\n",
+    "name = dcd.split(\".\")[0]\n",
+    "\n",
+    "feat = pyemma.coordinates.featurizer(pdb)\n",
+    "feat.add_distances_ca()\n",
+    "dist_data = pyemma.coordinates.load(dcd, features=feat)\n",
+    "edist_data = np.exp(-dist_data)\n",
+    "n_timesteps, input_dim = edist_data.shape\n",
+    "\n",
+    "from sklearn import decomposition\n",
+    "pca = decomposition.PCA(n_components=input_dim, whiten=True)\n",
+    "preprocessed_data = pca.fit_transform(edist_data)"
    ]
   },
   {
